# gocardless-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
bruno/Go Cardless/: bruno.json
bruno/Go Cardless/Bank Account Data/: Create end user agreement.bru  Create requisition.bru  Get access token.bru  Get account balances.bru  Get account details.bru  Get account transactions.bru  Get institutions.bru  List accounts.bru
bruno/Go Cardless/environments/: Test.bru
examples/01_ceate_requisition/: Cargo.toml
examples/01_ceate_requisition/src/: main.rs
examples/01_create_requisition/src/: main.rs
examples/02_list_transactions/: Cargo.toml
examples/02_list_transactions/src/: main.rs
src/: client.rs  lib.rs  model.rs
