[package]
name = "gocardless-unofficial"
version = "0.1.2"
edition = "2021"
authors = ["Joe Burnard <github.com/ducc>"]
rust-version = "1.63.0"
description = "An unofficial rust library to interact with the GoCardless Bank Account Data API"
readme = "README.md"
repository = "https://github.com/ducc/gocardless-rs"
license = "MIT"
keywords = ["gocardless"]

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
secrecy = "0.8.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"

[lib]
doctest = false
